VXIPNP/WinNT/include/age1960.h


    /*****************************************************************************/
    /*  STANDARD SECTION                                                         */
    /*  Constants and function prototypes for Agilent standard functions.        */
    /*****************************************************************************/

    /***************************************************/
    /*  Standard constant error conditions returned    */
    /*  by driver functions.                           */
    /*    Agilent Common Error numbers start at BFFC0D00    */
    /*    The parameter errors extend the number of    */
    /*      errors over the eight defined in VPP 3.4   */
    /***************************************************/

#define age1960_INSTR_ERROR_NULL_PTR      (_VI_ERROR+0x3FFC0D02L) /* 0xBFFC0D02 */
#define age1960_INSTR_ERROR_RESET_FAILED  (_VI_ERROR+0x3FFC0D03L) /* 0xBFFC0D03 */
#define age1960_INSTR_ERROR_UNEXPECTED    (_VI_ERROR+0x3FFC0D04L) /* 0xBFFC0D04 */
#define age1960_INSTR_ERROR_INV_SESSION   (_VI_ERROR+0x3FFC0D05L) /* 0xBFFC0D05 */
#define age1960_INSTR_ERROR_LOOKUP        (_VI_ERROR+0x3FFC0D06L) /* 0xBFFC0D06 */
#define age1960_INSTR_ERROR_DETECTED      (_VI_ERROR+0x3FFC0D07L) /* 0xBFFC0D07 */
#define age1960_INSTR_NO_LAST_COMMA       (_VI_ERROR+0x3FFC0D08L) /* 0xBFFC0D08 */

#define age1960_INSTR_ERROR_PARAMETER9    (_VI_ERROR+0x3FFC0D20L) /* 0xBFFC0D20 */
#define age1960_INSTR_ERROR_PARAMETER10   (_VI_ERROR+0x3FFC0D21L) /* 0xBFFC0D21 */
#define age1960_INSTR_ERROR_PARAMETER11   (_VI_ERROR+0x3FFC0D22L) /* 0xBFFC0D22 */
#define age1960_INSTR_ERROR_PARAMETER12   (_VI_ERROR+0x3FFC0D23L) /* 0xBFFC0D23 */
#define age1960_INSTR_ERROR_PARAMETER13   (_VI_ERROR+0x3FFC0D24L) /* 0xBFFC0D24 */
#define age1960_INSTR_ERROR_PARAMETER14   (_VI_ERROR+0x3FFC0D25L) /* 0xBFFC0D25 */
#define age1960_INSTR_ERROR_PARAMETER15   (_VI_ERROR+0x3FFC0D26L) /* 0xBFFC0D26 */
#define age1960_INSTR_ERROR_PARAMETER16   (_VI_ERROR+0x3FFC0D27L) /* 0xBFFC0D27 */
#define age1960_INSTR_ERROR_PARAMETER17   (_VI_ERROR+0x3FFC0D28L) /* 0xBFFC0D28 */
#define age1960_INSTR_ERROR_PARAMETER18   (_VI_ERROR+0x3FFC0D29L) /* 0xBFFC0D29 */

#define age1960_CMDSTRING_Q_MIN              2
#define age1960_CMDSTRING_Q_MAX          32767
#define age1960_CMDINT_MIN         -2147483647
#define age1960_CMDINT_MAX          2147483647
#define age1960_CMDREAL_MIN           -1E+300
#define age1960_CMDREAL_MAX            1E+300

    /***************************************************/
    /*  Constants used by system status functions      */
    /*    These defines are the available status       */
    /*    registers that can be read or programmed.    */
    /*    They are instrument specific.                */
    /***************************************************/

#define age1960_QUES_SUMMARY                  0
#define age1960_QUES_CALL                     1
#define age1960_QUES_ERROR                    2
#define age1960_QUES_HARDWARE                 3
#define age1960_QUES_CALL_GSM                 4
#define age1960_QUES_ERROR_GSM                5

#define age1960_OPER_SUMMARY                  0
#define age1960_OPER_NMRR                     1
#define age1960_OPER_CALL                     2
#define age1960_OPER_NMRR_GSM                 3
#define age1960_OPER_CALL_GSM                 4

    /***************************************************/
    /*  Constants used by system status functions      */
    /*    These defines are bit numbers which define   */
    /*    the operation and questionable registers.    */
    /*    They are instrument specific.                */
    /***************************************************/

#define age1960_REGISTER_MIN                 0
#define age1960_REGISTER_MAX                 32767

#define age1960_STD_REGISTER_MIN             0
#define age1960_STD_REGISTER_MAX             255

#define age1960_ESE_OPC                      1
#define age1960_ESE_AVAIL1                   2
#define age1960_ESE_QUERY_ERR                4
#define age1960_ESE_DEVICE_ERR               8
#define age1960_ESE_EXEC_ERR                16
#define age1960_ESE_CMD_ERR                 32
#define age1960_ESE_AVAIL6                  64
#define age1960_ESE_PWR_ON                 128

#define age1960_STB_OPC                      1
#define age1960_STB_AVAIL1                   2
#define age1960_STB_ERR_QUEUE                4
#define age1960_STB_QUES_SUM                 8
#define age1960_STB_MAV                     16
#define age1960_STB_ESE_SUM                 32
#define age1960_STB_RQS                     64
#define age1960_STB_OPER_SUM               128

#define age1960_QUES_SUM_AVAIL0              1
#define age1960_QUES_SUM_ERRORS              2
#define age1960_QUES_SUM_AVAIL2              4
#define age1960_QUES_SUM_AVAIL3              8
#define age1960_QUES_SUM_AVAIL4             16
#define age1960_QUES_SUM_AVAIL5             32
#define age1960_QUES_SUM_AVAIL6             64
#define age1960_QUES_SUM_AVAIL7            128
#define age1960_QUES_SUM_AVAIL8            256
#define age1960_QUES_SUM_AVAIL9            512
#define age1960_QUES_SUM_CALL             1024
#define age1960_QUES_SUM_HW               2048
#define age1960_QUES_SUM_AVAIL12          4096
#define age1960_QUES_SUM_AVAIL13          8192
#define age1960_QUES_SUM_AVAIL14         16384
#define age1960_QUES_SUM_AVAIL15         32768

#define age1960_OPER_SUM_AVAIL0              1
#define age1960_OPER_SUM_AVAIL1              2
#define age1960_OPER_SUM_AVAIL2              4
#define age1960_OPER_SUM_AVAIL3              8
#define age1960_OPER_SUM_AVAIL4             16
#define age1960_OPER_SUM_AVAIL5             32
#define age1960_OPER_SUM_AVAIL6             64
#define age1960_OPER_SUM_AVAIL7            128
#define age1960_OPER_SUM_AVAIL8            256
#define age1960_OPER_SUM_NMRR              512
#define age1960_OPER_SUM_CALL             1024
#define age1960_OPER_SUM_AVAIL11          2048
#define age1960_OPER_SUM_SYSSYNC          4096
#define age1960_OPER_SUM_AVAIL13          8192
#define age1960_OPER_SUM_AVAIL14         16384
#define age1960_OPER_SUM_AVAIL15         32768

#define age1960_QUES_ERR_AVAIL0              1
#define age1960_QUES_ERR_100                 2
#define age1960_QUES_ERR_200                 4
#define age1960_QUES_ERR_300                 8
#define age1960_QUES_ERR_400                16
#define age1960_QUES_ERR_500                32
#define age1960_QUES_ERR_600                64
#define age1960_QUES_ERR_700               128
#define age1960_QUES_ERR_800               256
#define age1960_QUES_ERR_900               512
#define age1960_QUES_ERR_AVAIL10          1024
#define age1960_QUES_ERR_AVAIL11          2048
#define age1960_QUES_ERR_AVAIL12          4096
#define age1960_QUES_ERR_AVAIL13          8192
#define age1960_QUES_ERR_AVAIL14          6384
#define age1960_QUES_ERR_AVAIL15         32768

#define age1960_OPER_NMRR_AVAIL0             1
#define age1960_OPER_NMRR_TXP                2
#define age1960_OPER_NMRR_PVT                4
#define age1960_OPER_NMRR_PFER               8
#define age1960_OPER_NMRR_ORFS              16
#define age1960_OPER_NMRR_AAUD              32
#define age1960_OPER_NMRR_DAUD              64
#define age1960_OPER_NMRR_FBER             128
#define age1960_OPER_NMRR_BER              256
#define age1960_OPER_NMRR_IQT              512
#define age1960_OPER_NMRR_DPOW            1024
#define age1960_OPER_NMRR_AVAIL11         2048
#define age1960_OPER_NMRR_AVAIL12         4096
#define age1960_OPER_NMRR_AVAIL13         8192
#define age1960_OPER_NMRR_AVAIL14        16384
#define age1960_OPER_NMRR_AVAIL15        32768

#define age1960_QUES_CALL_AVAIL0             1
#define age1960_QUES_CALL_DATA               2
#define age1960_QUES_CALL_RADIO              4
#define age1960_QUES_CALL_IMM                8
#define age1960_QUES_CALL_CHAN              16
#define age1960_QUES_CALL_HANDOVER          32
#define age1960_QUES_CALL_NO_RESP           64
#define age1960_QUES_CALL_FRAMES           128
#define age1960_QUES_CALL_ID               256
#define age1960_QUES_CALL_AVAIL9           512
#define age1960_QUES_CALL_AVAIL10         1024
#define age1960_QUES_CALL_AVAIL11         2048
#define age1960_QUES_CALL_AVAIL12         4096
#define age1960_QUES_CALL_AVAIL13         8192
#define age1960_QUES_CALL_AVAIL14        16384
#define age1960_QUES_CALL_IT15           32768

#define age1960_OPER_CALL_AVAIL0             1
#define age1960_OPER_CALL_IDLE               2
#define age1960_OPER_CALL_CONNECTED          4
#define age1960_OPER_CALL_ALERTING           8
#define age1960_OPER_CALL_BCH_CHANGING      16
#define age1960_OPER_CALL_TCH_CHANGING      32
#define age1960_OPER_CALL_CNT_CHANGING      64
#define age1960_OPER_CALL_BS_ORIGINATING   128
#define age1960_OPER_CALL_BS_DISCONNECTING 256
#define age1960_OPER_CALL_AVAIL9           512
#define age1960_OPER_CALL_AVAIL10         1024
#define age1960_OPER_CALL_AVAIL11         2048
#define age1960_OPER_CALL_AVAIL12         4096
#define age1960_OPER_CALL_AVAIL13         8192
#define age1960_OPER_CALL_AVAIL14        16384
#define age1960_OPER_CALL_AVAIL15        32768

#define age1960_QUES_HW_AVAIL0               1
#define age1960_QUES_HW_AVAIL1               2
#define age1960_QUES_HW_AVAIL2               4
#define age1960_QUES_HW_AVAIL3               8
#define age1960_QUES_HW_PWRUP_ST_FAILED     16
#define age1960_QUES_HW_AVAIL5              32
#define age1960_QUES_HW_AVAIL6              64
#define age1960_QUES_HW_AVAIL7             128
#define age1960_QUES_HW_AVAIL8             256
#define age1960_QUES_HW_AVAIL9             512
#define age1960_QUES_HW_AVAIL10           1024
#define age1960_QUES_HW_AVAIL11           2048
#define age1960_QUES_HW_AVAIL12           4096
#define age1960_QUES_HW_AVAIL13           8192
#define age1960_QUES_HW_AVAIL14          16384
#define age1960_QUES_HW_AVAIL15          32768

    /***************************************************/
    /*  Constants used by function age1960_timeOut	   */
    /***************************************************/

#define age1960_TIMEOUT_MAX         120000L
#define age1960_TIMEOUT_MIN         0L

    /***************************************************/
    /*  Required plug and play functions from VPP-3.1  */
    /***************************************************/

    ViStatus _VI_FUNC age1960_init
    (ViRsrc     resourceName,
     ViBoolean  IDQuery,
     ViBoolean  resetDevice,
     ViPSession instrumentHandle);


    ViStatus _VI_FUNC age1960_close
    (ViSession  instrumentHandle);


    ViStatus _VI_FUNC age1960_reset
    (ViSession  instrumentHandle);


    ViStatus _VI_FUNC age1960_self_test
    (ViSession  instrumentHandle,
     ViPInt16   selfTestResult,
     ViPString  selfTestMessage);


    ViStatus _VI_FUNC age1960_error_query
    (ViSession  instrumentHandle,
     ViPInt32   errorCode,
     ViPString  errorMessage);


    ViStatus _VI_FUNC age1960_error_message
    (ViSession  instrumentHandle,
     ViStatus   statusCode,
     ViPString  message);


    ViStatus _VI_FUNC age1960_revision_query
    (ViSession  instrumentHandle,
     ViPString  instrumentDriverRevision,
     ViPString  firmwareRevision);



    /***************************************************/
    /*  Agilent standard utility functions             */
    /***************************************************/

    ViStatus _VI_FUNC age1960_timeOut
    (ViSession  instrumentHandle,
     ViInt32    setTimeOut);