VXIPNP/WinNT/include/age1960.bas

Attribute VB_Name = "Module1"
'*****************************************************************************
'*  age1960.bas                                                              *
'*  Copyright (C) 1999 - 2002 Agilent Technologies                           *
'*---------------------------------------------------------------------------*
'*  Driver for age1960, GSM Mobile Test for 8960 Series 10 E5515             *
'*  Driver Version: A.05.00                                                  *
'*****************************************************************************

'*****************************************************************************
'*  STANDARD SECTION                                                         *
'*  Constants and function prototypes for Agilent standard functions.        *
'*****************************************************************************

'        ***************************************************
'        *  Standard constant used by driver functions     *
'        *  that are defined in visa32.bas                 *
'        *  If you don't include visa32.bas, uncomment the *
'        *  following constants                            *
'        ***************************************************

'Global Const VI_SUCCESS = 0
'Global Const VI_TRUE = 1
'Global Const VI_FALSE = 0
'Global Const VI_NULL = 0
'
'        ***************************************************
'        *  Standard constant error conditions returned    *
'        *  by driver functions.                           *
'        *  Agilent Common Error numbers start at BFFC0D00 *
'        *  The parameter errors extend the number of      *
'        *  errors over the eight defined in VPP 3.4       *
'        ***************************************************

Global Const age1960_INSTR_ERROR_NULL_PTR = &HBFFC0D02
Global Const age1960_INSTR_ERROR_RESET_FAILED = &HBFFC0D03
Global Const age1960_INSTR_ERROR_UNEXPECTED = &HBFFC0D04
Global Const age1960_INSTR_ERROR_INV_SESSION = &HBFFC0D05
Global Const age1960_INSTR_ERROR_LOOKUP = &HBFFC0D06
Global Const age1960_INSTR_ERROR_DETECTED = &HBFFC0D07
Global Const age1960_INSTR_NO_LAST_COMMA = &HBFFC0D08

Global Const age1960_INSTR_ERROR_PARAMETER9 = &HBFFC0D20
Global Const age1960_INSTR_ERROR_PARAMETER10 = &HBFFC0D21
Global Const age1960_INSTR_ERROR_PARAMETER11 = &HBFFC0D22
Global Const age1960_INSTR_ERROR_PARAMETER12 = &HBFFC0D23
Global Const age1960_INSTR_ERROR_PARAMETER13 = &HBFFC0D24
Global Const age1960_INSTR_ERROR_PARAMETER14 = &HBFFC0D25
Global Const age1960_INSTR_ERROR_PARAMETER15 = &HBFFC0D26
Global Const age1960_INSTR_ERROR_PARAMETER16 = &HBFFC0D27
Global Const age1960_INSTR_ERROR_PARAMETER17 = &HBFFC0D28
Global Const age1960_INSTR_ERROR_PARAMETER18 = &HBFFC0D29

Global Const age1960_CMDSTRING_Q_MIN = 2
Global Const age1960_CMDSTRING_Q_MAX = 32767
Global Const age1960_CMDINT_MIN = -2147483647
Global Const age1960_CMDINT_MAX = 2147483647
Global Const age1960_CMDREAL_MIN = -1E+300
Global Const age1960_CMDREAL_MAX = 1E+300

'        ***************************************************
'        *  Constants used by system status functions      *
'        *    These defines are bit numbers which define   *
'        *    the operation and questionable registers.    *
'        *    They are instrument specific.                *
'        ***************************************************

Global Const age1960_QUES_SUMMARY = 0
Global Const age1960_QUES_CALL = 1
Global Const age1960_QUES_ERROR = 2
Global Const age1960_QUES_HARDWARE = 3
Global Const age1960_QUES_CALL_GSM = 4
Global Const age1960_QUES_ERROR_GSM = 5

Global Const age1960_OPER_SUMMARY = 0
Global Const age1960_OPER_NMRR = 1
Global Const age1960_OPER_CALL = 2
Global Const age1960_OPER_NMRR_GSM = 3
Global Const age1960_OPER_CALL_GSM = 4

'        ****************************************************
'        *  Constants used by system status functions       *
'        *    These defines are bit numbers which define    *
'        *    the operation and questionable registers.     *
'        *    They are instrument specific.                 *
'        ****************************************************

Global Const age1960_REGISTER_MIN = 0
Global Const age1960_REGISTER_MAX = 32767

Global Const age1960_STD_REGISTER_MIN = 0
Global Const age1960_STD_REGISTER_MAX = 255

Global Const age1960_ESE_OPC = 1
Global Const age1960_ESE_AVAIL1 = 2
Global Const age1960_ESE_QUERY_ERR = 4
Global Const age1960_ESE_DEVICE_ERR = 8
Global Const age1960_ESE_EXEC_ERR = 16
Global Const age1960_ESE_CMD_ERR = 32
Global Const age1960_ESE_AVAIL6 = 64
Global Const age1960_ESE_PWR_ON = 128

Global Const age1960_STB_OPC = 1
Global Const age1960_STB_AVAIL1 = 2
Global Const age1960_STB_ERR_QUEUE = 4
Global Const age1960_STB_QUES_SUM = 8
Global Const age1960_STB_MAV = 16
Global Const age1960_STB_ESE_SUM = 32
Global Const age1960_STB_RQS = 64
Global Const age1960_STB_OPER_SUM = 128

Global Const age1960_QUES_SUM_AVAIL0 = 1
Global Const age1960_QUES_SUM_ERRORS = 2
Global Const age1960_QUES_SUM_AVAIL2 = 4
Global Const age1960_QUES_SUM_AVAIL3 = 8
Global Const age1960_QUES_SUM_AVAIL4 = 16
Global Const age1960_QUES_SUM_AVAIL5 = 32
Global Const age1960_QUES_SUM_AVAIL6 = 64
Global Const age1960_QUES_SUM_AVAIL7 = 128
Global Const age1960_QUES_SUM_AVAIL8 = 256
Global Const age1960_QUES_SUM_AVAIL9 = 512
Global Const age1960_QUES_SUM_CALL = 1024
Global Const age1960_QUES_SUM_HW = 2048
Global Const age1960_QUES_SUM_AVAIL12 = 4096
Global Const age1960_QUES_SUM_AVAIL13 = 8192
Global Const age1960_QUES_SUM_AVAIL14 = 16384
Global Const age1960_QUES_SUM_AVAIL15 = 32768

Global Const age1960_OPER_SUM_AVAIL0 = 1
Global Const age1960_OPER_SUM_AVAIL1 = 2
Global Const age1960_OPER_SUM_AVAIL2 = 4
Global Const age1960_OPER_SUM_AVAIL3 = 8
Global Const age1960_OPER_SUM_AVAIL4 = 16
Global Const age1960_OPER_SUM_AVAIL5 = 32
Global Const age1960_OPER_SUM_AVAIL6 = 64
Global Const age1960_OPER_SUM_AVAIL7 = 128
Global Const age1960_OPER_SUM_AVAIL8 = 256
Global Const age1960_OPER_SUM_NMRR = 512
Global Const age1960_OPER_SUM_CALL = 1024
Global Const age1960_OPER_SUM_AVAIL11 = 2048
Global Const age1960_OPER_SUM_SYSSYNC = 4096
Global Const age1960_OPER_SUM_AVAIL13 = 8192
Global Const age1960_OPER_SUM_AVAIL14 = 16384
Global Const age1960_OPER_SUM_AVAIL15 = 32768

Global Const age1960_QUES_ERR_AVAIL0 = 1
Global Const age1960_QUES_ERR_100 = 2
Global Const age1960_QUES_ERR_200 = 4
Global Const age1960_QUES_ERR_300 = 8
Global Const age1960_QUES_ERR_400 = 16
Global Const age1960_QUES_ERR_500 = 32
Global Const age1960_QUES_ERR_600 = 64
Global Const age1960_QUES_ERR_700 = 128
Global Const age1960_QUES_ERR_800 = 256
Global Const age1960_QUES_ERR_900 = 512
Global Const age1960_QUES_ERR_AVAIL10 = 1024
Global Const age1960_QUES_ERR_AVAIL11 = 2048
Global Const age1960_QUES_ERR_AVAIL12 = 4096
Global Const age1960_QUES_ERR_AVAIL13 = 8192
Global Const age1960_QUES_ERR_AVAIL14 = 6384
Global Const age1960_QUES_ERR_AVAIL15 = 32768

Global Const age1960_OPER_NMRR_AVAIL0 = 1
Global Const age1960_OPER_NMRR_TXP = 2
Global Const age1960_OPER_NMRR_PVT = 4
Global Const age1960_OPER_NMRR_PFER = 8
Global Const age1960_OPER_NMRR_ORFS = 16
Global Const age1960_OPER_NMRR_AAUD = 32
Global Const age1960_OPER_NMRR_DAUD = 64
Global Const age1960_OPER_NMRR_FBER = 128
Global Const age1960_OPER_NMRR_BER = 256
Global Const age1960_OPER_NMRR_IQT = 512
Global Const age1960_OPER_NMRR_DPOW = 1024
Global Const age1960_OPER_NMRR_AVAIL11 = 2048
Global Const age1960_OPER_NMRR_AVAIL12 = 4096
Global Const age1960_OPER_NMRR_AVAIL13 = 8192
Global Const age1960_OPER_NMRR_AVAIL14 = 16384
Global Const age1960_OPER_NMRR_AVAIL15 = 32768

Global Const age1960_QUES_CALL_AVAIL0 = 1
Global Const age1960_QUES_CALL_DATA = 2
Global Const age1960_QUES_CALL_RADIO = 4
Global Const age1960_QUES_CALL_IMM = 8
Global Const age1960_QUES_CALL_CHAN = 16
Global Const age1960_QUES_CALL_HANDOVER = 32
Global Const age1960_QUES_CALL_NO_RESP = 64
Global Const age1960_QUES_CALL_FRAMES = 128
Global Const age1960_QUES_CALL_ID = 256
Global Const age1960_QUES_CALL_AVAIL9 = 512
Global Const age1960_QUES_CALL_AVAIL10 = 1024
Global Const age1960_QUES_CALL_AVAIL11 = 2048
Global Const age1960_QUES_CALL_AVAIL12 = 4096
Global Const age1960_QUES_CALL_AVAIL13 = 8192
Global Const age1960_QUES_CALL_AVAIL14 = 16384
Global Const age1960_QUES_CALL_IT15 = 32768

Global Const age1960_OPER_CALL_AVAIL0 = 1
Global Const age1960_OPER_CALL_IDLE = 2
Global Const age1960_OPER_CALL_CONNECTED = 4
Global Const age1960_OPER_CALL_ALERTING = 8
Global Const age1960_OPER_CALL_BCH_CHANGING = 16
Global Const age1960_OPER_CALL_TCH_CHANGING = 32
Global Const age1960_OPER_CALL_CNT_CHANGING = 64
Global Const age1960_OPER_CALL_BS_ORIGINATING = 128
Global Const age1960_OPER_CALL_BS_DISCONNECTING = 256
Global Const age1960_OPER_CALL_AVAIL9 = 512
Global Const age1960_OPER_CALL_AVAIL10 = 1024
Global Const age1960_OPER_CALL_AVAIL11 = 2048
Global Const age1960_OPER_CALL_AVAIL12 = 4096
Global Const age1960_OPER_CALL_AVAIL13 = 8192
Global Const age1960_OPER_CALL_AVAIL14 = 16384
Global Const age1960_OPER_CALL_AVAIL15 = 32768

Global Const age1960_QUES_HW_AVAIL0 = 1
Global Const age1960_QUES_HW_AVAIL1 = 2
Global Const age1960_QUES_HW_AVAIL2 = 4
Global Const age1960_QUES_HW_AVAIL3 = 8
Global Const age1960_QUES_HW_PWRUP_ST_FAILED = 16
Global Const age1960_QUES_HW_AVAIL5 = 32
Global Const age1960_QUES_HW_AVAIL6 = 64
Global Const age1960_QUES_HW_AVAIL7 = 128
Global Const age1960_QUES_HW_AVAIL8 = 256
Global Const age1960_QUES_HW_AVAIL9 = 512
Global Const age1960_QUES_HW_AVAIL10 = 1024
Global Const age1960_QUES_HW_AVAIL11 = 2048
Global Const age1960_QUES_HW_AVAIL12 = 4096
Global Const age1960_QUES_HW_AVAIL13 = 8192
Global Const age1960_QUES_HW_AVAIL14 = 16384
Global Const age1960_QUES_HW_AVAIL15 = 32768

'        ***************************************************
'        *  Constants used by function age1960_timeOut     *
'        ***************************************************

Global Const age1960_TIMEOUT_MAX = 120000
Global Const age1960_TIMEOUT_MIN = 0&

'        ***************************************************
'        *  Required plug and play functions from VPP-3.1  *
'        ***************************************************

Declare Function age1960_init Lib "age1960_32.dll" _
   (ByVal resourceName As String, _
    ByVal IDQuery As Integer, _
    ByVal resetDevice As Integer, _
    ByRef instrumentHandle As Long) As Long

Declare Function age1960_close Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long) As Long

Declare Function age1960_reset Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long) As Long

Declare Function age1960_self_test Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef selfTestResult As Integer, _
    ByVal selfTestMessage As String) As Long

Declare Function age1960_error_query Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef errorCode As Long, _
    ByVal errorMessage As String) As Long

Declare Function age1960_error_message Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal statusCode As Long, _
    ByVal message As String) As Long

Declare Function age1960_revision_query Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal instrumentDriverRevision As String, _
    ByVal firmwareRevision As String) As Long

'        ***************************************************
'        *  Agilent standard utility functions             *
'        ***************************************************

Declare Function age1960_timeOut Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal setTimeOut As Long) As Long
